# annual_striving_for_excellence_evaluation

./: readme.md  基层党组织季度 年度创先争优评价结果（模板）.xlsx
server/: database.py  main.py  pyproject.toml
server/data/: evaluation.db
server/models/: models.py
server/routers/: annual_evals.py  eval_rules.py  organizations.py  quarterly_evals.py
server/schemas/: schemas.py
server/services/: excel_service.py  grading.py  scoring.py
web/: package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/annual/: page.tsx
web/app/organizations/: page.tsx
web/app/quarterly/: page.tsx
web/app/settings/: page.tsx
web/components/layout/: sidebar.tsx
web/lib/: api.ts  types.ts
